--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,10 +6,15 @@ spring.datasource.driver-class-name= org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto= update 
 spring.jpa.properties.temp.use_jdbc_metadata_defaults=false
-spring.jpa.database-platform=org.hibernate.dialect.PostgresSQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=rue
 
+spring.main.banner-mode=console
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
+
+spring.jackson.time-zone=Brazil/East
+spring.jackson.locale=pt-BR
